# gumbo-query

./: .gitmodules  CMakeLists.txt
cmake/: FindGumbo.cmake
include/gq/: Document.h  Node.h  Parser.h  QueryUtil.h  Selection.h  Selector.h
src/: CMakeLists.txt  Document.cpp  Node.cpp  Object.cpp  Parser.cpp  QueryUtil.cpp  Selection.cpp  Selector.cpp
test/: CMakeLists.txt
